# Copyright 2026 The OpenFst Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Description:
#   Categorial semiring packages.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "categorial-weight",
    hdrs = ["categorial-weight.h"],
    deps = [
        "//openfst/lib",
        "//openfst/lib:util",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "weight_test",
    size = "large",
    srcs = ["weight_test.cc"],
    linkstatic = True,
    deps = [
        ":categorial-weight",
        "//openfst/compat:init",
        "//openfst/lib:weight",
        "//openfst/test:weight_tester",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:flags",
        "@com_google_googletest//:gtest",
    ],
)
