# Copyright 2025 The OpenFst Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@//openfst/lib:build_rules.bzl", "fst_cc_library")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(
    default_visibility = ["//visibility:public"],
    features = ["parse_headers"],
)

cc_library(
    name = "elias",
    hdrs = ["elias.h"],
)

fst_cc_library(
    name = "compress",
    hdrs = ["compress.h"],
    deps = [
        ":elias",
        "//openfst/compat:compat_memory",
        "//openfst/lib",
        "//openfst/lib:file-util",
        "//openfst/lib:util",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
)

cc_library(
    name = "randmod",
    hdrs = ["randmod.h"],
    deps = ["//openfst/lib"],
)

cc_library(
    name = "script",
    srcs = ["compressscript.cc"],
    hdrs = ["compressscript.h"],
    deps = [
        ":compress",
        "//openfst/lib",
        "//openfst/lib:weight",
        "//openfst/script",
    ],
)

cc_library(
    name = "fstcompress-main",
    srcs = ["fstcompress-main.cc"],
    deps = [
        ":script",
        "//openfst/lib:util",
        "//openfst/script",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/flags:usage",
        "@com_google_absl//absl/log:flags",
    ],
)

cc_binary(
    name = "fstcompress",
    srcs = ["fstcompress.cc"],
    linkstatic = True,
    deps = [
        ":fstcompress-main",
        "@com_google_absl//absl/flags:flag",
    ],
)

cc_binary(
    name = "fstrandmod",
    srcs = ["fstrandmod.cc"],
    linkstatic = True,
    deps = [
        ":randmod",
        "//openfst/lib",
        "//openfst/lib:fst-decl",
        "//openfst/lib:weight",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/flags:usage",
        "@com_google_absl//absl/log:flags",
    ],
)

cc_test(
    name = "compress_test",
    size = "medium",
    srcs = [
        "compress_test.cc",
    ],
    data = [
        ":testdata/unweight.fst",
    ],
    linkstatic = True,
    deps = [
        ":compress",
        "//openfst/lib",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/flags:usage",
        "@com_google_absl//absl/log:flags",
        "@com_google_googletest//:gtest",
    ],
)

cc_test(
    name = "randmod_test",
    size = "medium",
    srcs = ["randmod_test.cc"],
    data = [":testdata/unweight.fst"],
    linkstatic = True,
    deps = [
        ":compress",
        ":randmod",
        "//openfst/compat:compat_memory",
        "//openfst/lib",
        "//openfst/lib:fst-decl",
        "//openfst/lib:weight",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/flags:usage",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:flags",
        "@com_google_absl//absl/memory",
        "@com_google_googletest//:gtest",
    ],
)

cc_library(
    name = "quantize_weights",
    srcs = ["quantize_weights.cc"],
    hdrs = ["quantize_weights.h"],
    deps = [
        "//openfst/lib",
        "//openfst/lib:weight",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/log:vlog_is_on",
        "@com_google_absl//absl/types:span",
    ],
)

cc_binary(
    name = "fstquantize",
    srcs = ["fstquantize.cc"],
    linkstatic = True,
    deps = [
        "quantize_weights",
        "//openfst/lib",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/flags:usage",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:flags",
    ],
)

cc_test(
    name = "quantize_weights_test",
    srcs = ["quantize_weights_test.cc"],
    data = [
        ":testdata/clip_only.fst",
        ":testdata/kmedian_quantization.fst",
        ":testdata/quantize_weights_input.fst",
        ":testdata/quantize_zero_weight.fst",
        ":testdata/uniform_quantization.fst",
        ":testdata/uniform_quantization_input_range.fst",
    ],
    linkstatic = True,
    deps = [
        ":quantize_weights",
        "//openfst/lib",
        "//openfst/lib:util",
        "//openfst/lib:weight",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/flags:usage",
        "@com_google_absl//absl/log:flags",
        "@com_google_googletest//:gtest",
    ],
)
