# Copyright 2025 The OpenFst Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Description:
#   Libraries for registering uncommon ConstFst types.

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

#
# Libraries
#

cc_library(
    name = "const8-fst",
    srcs = ["const8-fst.cc"],
    deps = [
        "//openfst/lib",
        "//openfst/lib:register",
    ],
    alwayslink = 1,
)

cc_library(
    name = "const16-fst",
    srcs = ["const16-fst.cc"],
    deps = [
        "//openfst/lib",
        "//openfst/lib:register",
    ],
    alwayslink = 1,
)

cc_library(
    name = "const64-fst",
    srcs = ["const64-fst.cc"],
    deps = [
        "//openfst/lib",
        "//openfst/lib:register",
    ],
    alwayslink = 1,
)
